--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
 <header>
   <p>
-    adam(1)
-    <span class="center-title">User's Manual</span>
     <select id="toggle" class="toggle-dropdown align-right">
       <option value="monokai-light" selected>[THEME: MONOKAI LIGHT]</option>
       <option value="monokai-dark">[THEME: MONOKAI DARK]</option>
@@ -22,51 +20,84 @@
     </select>
   </p>
 
-  <em>NAME</em>
-  <p class="indent">
-    J. Adam Lovatt - A junior web developer with experience in UI design and project management. Proficient in JavaScript, HTML5, CSS3, and Lua.
+  <em class="center-title">RESUME</em>
+  <p>
+    <span class="center-name">J. Adam Lovatt</span>
   </p>
 
-  <em>SYNOPSIS</em>
-  <p>
-    <span class="indent pre menu-name"><em>adam</em> </span>
-    <span class="menu-items">
-      <em><a class="anchor-no-decoration" href="#--developer">[--developer]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--designer">[--designer]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--contributor">[--contributor]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--educator">[--educator]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--leader">[--leader]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--guitarist">[--guitarist]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--music-lover">[--music-lover]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--dog-lover">[--dog-lover]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--shameless-geek">[--shameless-geek]</a> </em>
-    </span>
-  </p>
+  <div class="responsive-hide">
+    <em>SYNOPSIS</em>
+    <p>
+      <span class="indent pre menu-name"><em>adam</em> </span>
+      <span class="menu-items">
+        <em><a class="anchor-no-decoration" href="#--developer">[--developer]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--designer">[--designer]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--contributor">[--contributor]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--leader">[--leader]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--educator">[--educator]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--guitarist">[--guitarist]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--music-lover">[--music-lover]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--dog-lover">[--dog-lover]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--shameless-geek">[--shameless-geek]</a> </em>
+      </span>
+    </p>
+  </div>
 
   <div class="center-headings">
-    <em><a class="anchor-no-decoration" href="#SUMMARY">[SUMMARY]</a></em>    <em><a class="anchor-no-decoration" href="#SKILLS">[SKILLS]</a></em>    <em><a class="anchor-no-decoration" href="#history">[HISTORY]</a></em>
+    <em><a class="anchor-no-decoration" href="#summary">[SUMMARY]</a></em>    <em><a class="anchor-no-decoration" href="#projects">[PROJECTS]</a></em>  <em><a class="anchor-no-decoration" href="#skills">[SKILLS]</a></em>  <em><a class="anchor-no-decoration" href="#history">[HISTORY]</a></em>
   </div>
 </header>
 
-<!-- <div class="header-offset">&nbsp;</div> -->
-
 <main>
-  <em class="offset-anchor" id="SUMMARY">SUMMARY</em>
+  <em class="offset-anchor" id="summary">SUMMARY</em>
   <section class="indent">
     <p>
-      <em>adam</em> is a full-stack developer that can be easily adapted to work with a variety of languages and technologies. He can be used as a powerful text editor, but his skills are particularly useful for designing attractive and performant computer applications. <em>adam</em> has even been used to organize groups of workers and improve project efficiency while reducing the amount of oversight necessary.
+      I am a junior web developer with experience in UI design and project management, and proficiency in JavaScript, HTML5, CSS3, Ruby, and Lua.
     </p>
 
     <p>
-      <em>adam</em> has been designed from the ground up to be easily expanded with new tools and skills.
+      I love making things look neat and perfect.
     </p>
 
     <p>
-      <em>adam</em> loves making things look neat and perfect.
-    </p>
-
-    <p>
-      <em>adam</em> is eager to learn, eager to help, and eager to put his skills to use making your app and your codebase stand out.
-    </p>
-
-    <p>
-      In short, installing <em>adam</em> will make both him and your team better.
+      I'm eager to learn, eager to help, and eager to put my skills to use making your app and your codebase stand out.
     </p>
   </section>
 
-  <em class="offset-anchor" id="SKILLS">SKILLS</em>
+  <em class="offset-anchor" id="projects">PROJECTS</em>
+  <section class="indent">
+
+    <p>
+      Web projects developed for Lighthouse Labs'&nbsp;<wbr><a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Web Development Bootcamp</a>:
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="https://github.com/jalovatt/lighthouse-chatty#haxxy">Haxxy</a>: A real-time chat app built with React and a Websocket-based Express server.
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="http://sextant-lhl.herokuapp.com/">Sextant</a>: A user-driven library of useful websites for topics covered in the bootcamp, designed to fit in seamlessly with Lighthouse Labs' Compass learning platform.
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="http://grogger.herokuapp.com/">Grogger</a>: A Twitter-style single page app using JQuery to communicate with an Express back-end.
+    </p>
+
+    <p>
+      Notable projects (written in Lua) for <a target="_blank" href="https://www.reaper.fm/">REAPER</a>, a digital audio workstation:
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a><br>
+        The only full-featured UI toolkit for REAPER scripts.
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="https://forum.cockos.com/showthread.php?t=186637">Radial Menu</a><br>
+      A fast, expandable toolbar replacement offering a staggering amount of customizability for different workflows.
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="https://forum.cockos.com/showthread.php?t=185358">Theory Helper</a><br>
+      A suite of tools that assist users in matching musical notes to a scale, generating chords, and creating harmonies.
+    </p>
+
+
+  </section>
+
+  <em class="offset-anchor" id="skills">SKILLS</em>
   <section class="indent">
     <em class="offset-anchor" id="--developer">--developer</em><br>
     <div class="indent">
@@ -74,84 +105,46 @@
         Adept at programming in:
       </p>
 
-      <p class="indent pre">* JavaScript            * SQL
-* HTML5                 * Ruby
-* CSS3                  * Lua</p>
+      <p class="indent pre">* JavaScript    * SQL
+* HTML5         * Ruby
+* CSS3          * Lua</p>
     </div>
 
-    <div class="indent">
+    <div class="indent print-experienced">
       <p>
-        Attended the Lighthouse Labs&nbsp;<wbr><a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Web Development Bootcamp</a>, where he gained experience building and deploying web applications using:
+        Experienced in:
       </p>
 
-      <p class="indent pre">* jQuery                * Express
-* React                 * MongoDB
-* Node                  * PostgreSQL
-* Rails                 * Heroku
-* Mocha/Chai            * SASS</p>
+      <p class="indent pre">* jQuery        * Express
+* React         * MongoDB
+* Node          * PostgreSQL
+* Rails         * Heroku
+* Mocha/Chai    * SASS
+* Git</p>
     </div>
 
-    <p class="indent">
-      Some of <em>adam</em>'s web projects include:
-    </p>
 
-    <div class="indent">
-      <p class="indent">
-        * <a target="_blank" href="http://sextant-lhl.herokuapp.com/">Sextant</a>: A user-driven library of useful websites for topics covered in the bootcamp, designed to fit in seamlessly with LHL's Compass learning platform. <em>adam</em> was responsible for the PostgreSQL database and adapting his team's markup to use the learning platform's stylesheets.
-      </p>
-
-      <p class="indent">
-        * <a target="_blank" href="http://grogger.herokuapp.com/">Grogger</a>: A basic Twitter-style single page app using JQuery to communicate with a back-end API.
-      </p>
-    </div>
   </section>
 
   <section class="indent">
     <em class="offset-anchor" id="--designer">--designer</em>
     <p class="indent">
-      Designed, built, and continues to maintain <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a>, a user interface framework for the <a target="_blank" href="https://www.reaper.fm/">REAPER</a> digital audio workstation that gives scripters an easy-to-use set of interface elements, handles drawing and updates, and takes care of end-user event handling.
+      I designed, built, and continue to maintain the <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a> framework for <a target="_blank" href="https://www.reaper.fm/">REAPER</a>, providing scripters with a large set of components, highly-performant updating and rendering, and easy-to-use event handling.
     </p>
   </section>
 
   <section class="indent">
     <em class="offset-anchor" id="--contributor">--contributor</em>
     <p class="indent">
-      <em>adam</em> has created dozens of scripts and tools for the REAPER community, some of which have been used by established music, sound design, and game development studios.
-    </p>
-
-    <p class="indent">
-      Notable REAPER projects:
-    </p>
-
-    <div class="indent">
-      <p class="indent">
-        * <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a>
-      </p>
-
-      <p class="indent">
-        * <a target="_blank" href="https://forum.cockos.com/showthread.php?t=186637">Radial Menu</a>: A fast, expandable toolbar replacement offering a staggering amount of customizability for different workflows.
-      </p>
-
-      <p class="indent">
-        * <a target="_blank" href="https://forum.cockos.com/showthread.php?t=185358">Theory Helper</a>: Suite of tools that assist users in matching musical notes to a scale, generating chords, and creating harmonies.
-      </p>
-    </div>
-
-  </section>
-
-  <section class="indent">
-    <em class="offset-anchor" id="--educator">--educator</em>
-    <p class="indent">
-      Some applications experience segmentation faults at the thought of having to explain something, but not <em>adam</em>. He genuinely enjoys teaching others what he knows, and has frequently been known to answer simple questions of syntax or usage with short essays covering a variety of use cases, pros, cons, and pitfalls.
+      I have created dozens of scripts and tools for REAPER's open-source community, some of which have been used by established music, sound design, and game development studios.
     </p>
   </section>
 
   <section class="indent">
     <em class="offset-anchor" id="--leader">--leader</em>
     <p class="indent">
-      Installing <em>adam</em> provides a number of team- and project-management tools. As an electrician he has effectively headed teams of up to 20 workers in the completion of long-term projects with a minimal amount of outside assistance.
+      As an electrician, I've effectively headed teams of up to 20 workers in the completion of long-term projects with a minimal amount of outside assistance.
     </p>
-
 
     <div class="indent">
       <p class="indent">
@@ -162,83 +155,85 @@
   </section>
 
   <section class="indent">
+    <em class="offset-anchor" id="--educator">--educator</em>
+    <p class="indent">
+      I genuinely enjoy teaching others, and have frequently been known to answer simple questions of syntax or usage with short essays covering a variety of use cases, pros, cons, and pitfalls.
+    </p>
+  </section>
+
+  <section class="indent">
     <em class="offset-anchor" id="--guitarist">--guitarist</em>,<br>
     <em class="offset-anchor" id="--music-lover">--music-lover</em>
     <p class="indent">
-      <em>adam</em> lives and breathes music, covering a wide range from classical to jazz to folk to death metal, though he will happily admit to being particularly fond of anything associated with the 1980s. He is a capable guitarist and amateur mixing engineer, and laments not having the living space in which to build his own instruments and amplifiers.
+      I live and breathe music, from classical to jazz to folk to death metal (though I'll happily admit to being stuck in the 1980s)
     </p>
   </section>
 
   <section class="indent">
     <em class="offset-anchor" id="--dog-lover">--dog-lover</em>
     <p class="indent">
-      Comes pre-configured with one or more Boston Terriers, because Boston Terriers are one of mankind's greatest achievements.
+      I firmly believe that Boston Terriers are one of mankind's greatest achievements.
     </p>
   </section>
 
   <section class="indent">
     <em class="offset-anchor" id="--shameless-geek">--shameless-geek</em>
-    <p class="indent"><em>adam</em> is a voracious consumer of science fiction, fantasy, and horror. He particularly enjoys the work of Douglas Adams, H.P. Lovecraft, John Carpenter, and Tim Burton, loves Star Trek, and considers The Expanse to be one of the best television shows in recent years.</p>
-
     <p class="indent">
-      <em>adam</em> is easily diverted for hours at a time chasing obscure topics down Wikipedian rabbit holes.
-    </p>
-
-    <p class="indent">
-      <em>adam</em> would happily pay a large sum of money in order to visit a lava lake up close.
+      Science fiction? Fantasy? Horror? Spending hours at a time reading about ridiculously obscure topics on Wikipedia? Yes please.
     </p>
   </section>
 
-  <em class="offset-anchor" id="history">HISTORY</em>
+  <em class="offset-anchor" id="history">PERSONAL HISTORY</em>
   <section class="indent">
-    * <em>3.0.0</em><br>
+    <em>v3.0</em> - Lighthouse Labs Web Development Bootcamp (Winter 2018)
     <p class="indent">
-      - Lighthouse Labs Web Development Bootcamp, October 2018<br>
-      - Complete rewrite of internal codebase, revamped user interface
+      Spent ten weeks cramming as much knowledge into my head as possible.
     </p>
+  </section>
 
-    * <em>2.8.0</em><br>
+  <section class="indent">
+    <em>v2.8</em> - Techmation Electric & Controls (2017-2018)
     <p class="indent">
-      - Techmation Electric & Controls - June 2017<br>
-      - Industrial electrician, oil and gas construction
+      Industrial electrician in the oil and gas sector, working on a number of projects across western Canada.
     </p>
+  </section>
 
-    * <em>2.0.0</em><br>
+  <section class="indent">
+    <em>v2.0</em> - Trotter & Morton Electrical (2010-2016)
     <p class="indent">
-      - Trotter & Morton, Electrical Division - January 2010<br>
-      - Commercial electrician, institutional construction</p>
-
-    * <em>1.7.0</em><br>
-    <p class="indent">
-      - Liquor Depot - October 2006<br>
-      - Store Manager
+      Commercial electrician, working on the construction of Calgary's South Health Campus and the Calgary Airport's International terminal.
     </p>
+  </section>
 
-    * <em>1.3.0</em><br>
+  <section class="indent">
+    <em>v1.7</em> - Liquor Depot (2006-2009)
     <p class="indent">
-      - Indigo Books & Music - January 2004
+      Store Manager, responsible for day-to-day operations, stock, and hiring personnel.
     </p>
+  </section>
 
-    * <em>1.0.0</em><br>
+  <section class="indent">
+    <em>v1.3</em> - Indigo Books & Music (2004-2006)
     <p class="indent">
-      - Springbank Community High School, Calgary, AB - June 2001<br>
-      - First stable release
+      Head Cashier
     </p>
+  </section>
 
-    * <em>0.1.0</em>
-    <p class="indent">
-      - February 18, 1984<br>
-      - Public alpha
-    </p>
+  <section class="indent">
+    <em>v1.0</em> - Springbank Community High School (Grad. 2001)
+  </section>
+  <br>
+  <section class="indent">
+    <em>v0.1</em> - February 18, 1984
   </section>
 </main>
 
 <footer>
-  <em id="contact">CONTACT</em>
-  <p class="center-contacts pre">* <a href="mailto://jalovatt@hotmail.com">jalovatt@hotmail.com</a>           * <a target="_blank" href="https://github.com/jalovatt">Github</a>
-* (403)852-8780                  * <a target="_blank" href="https://www.linkedin.com/in/adam-lovatt-864b25127/">LinkedIn</a></p>
+    <em id="contact">CONTACT</em>
+<p class="center-contacts pre"><span class="print-block">* <a href="mailto://jalovatt@hotmail.com">jalovatt@hotmail.com</a> </span>      <span class="print-block">* (403)852-8780</span>
+<span class="print-block">* <a target="_blank" href="https://github.com/jalovatt">Github</a></span>                     <span class="print-block">* <a target="_blank" href="https://www.linkedin.com/in/adam-lovatt-864b25127/">LinkedIn</a></span></p>
+  </span>
+  </footer>
 
-  <span class="center-date">2018-11-20</span><span class="align-right">adam(1)</span>
-</footer>
 </body>
 </html>
