--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class="theme-monokai-light">
+<html lang="en" class="theme-monokai-dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/main.css">
   <script src='scripts/app.js'></script>
-  <title>J. Adam Lovatt</title>
+  <title>Resume - J. Adam Lovatt</title>
 </head>
 <body>
 
 <header>
   <p>
     <select id="toggle" class="toggle-dropdown align-right">
-      <option value="monokai-light" selected>[THEME: MONOKAI LIGHT]</option>
-      <option value="monokai-dark">[THEME: MONOKAI DARK]</option>
+      <option value="monokai-light">[THEME: MONOKAI LIGHT]</option>
+      <option value="monokai-dark" selected>[THEME: MONOKAI DARK]</option>
       <option value="one-light">[THEME: ONE LIGHT]</option>
       <option value="one-dark">[THEME: ONE DARK]</option>
     </select>
@@ -44,15 +44,13 @@
   <em class="offset-anchor" id="summary">SUMMARY</em>
   <section class="indent">
     <p>
-      I am a junior web developer with experience in UI design and project management, and proficiency in JavaScript, HTML5, CSS3, Ruby, and Lua.
+      Junior web developer with experience in UI design and project management, and proficiency in JavaScript, HTML5, CSS3, Ruby, and Lua.
     </p>
-
     <p>
-      I love making things look neat and perfect.
+      I love logic, puzzles, and visual design, and I'm fascinated by the interplay between them that we find on the modern Web. Having gotten into coding during the early years of JavaScript, the improvements that have been made in recent years seem just short of wizardry. Who doesn't want to be a wizard?
     </p>
-
     <p>
-      I'm eager to learn, eager to help, and eager to put my skills to use making your app and your codebase stand out.
+      I'm excited to learn anything and everything about this industry - right down to nerdy subjects like typography or how to make sites load more efficiently - and eager to put my existing skills to use making your app and your codebase stand out.
     </p>
   </section>
 
@@ -129,7 +127,7 @@
   <section class="indent">
     <em class="offset-anchor" id="--designer">--designer</em>
     <p class="indent">
-      I designed, built, and continue to maintain the <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a> framework for <a target="_blank" href="https://www.reaper.fm/">REAPER</a>, providing scripters with a large set of components, highly-performant updating and rendering, and easy-to-use event handling.
+      I designed, built, and continue to maintain the <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a> framework for <a target="_blank" href="https://www.reaper.fm/">REAPER</a>, providing scripters with a large set of components, efficient updating and rendering, and easy-to-use event handling.
     </p>
   </section>
 
@@ -145,19 +143,12 @@
     <p class="indent">
       As an electrician, I've effectively headed teams of up to 20 workers in the completion of long-term projects with a minimal amount of outside assistance.
     </p>
-
-    <div class="indent">
-      <p class="indent">
-        * International Terminal, Calgary International Airport<br>
-        * South Health Campus, Calgary
-      </p>
-    </div>
   </section>
 
   <section class="indent">
     <em class="offset-anchor" id="--educator">--educator</em>
     <p class="indent">
-      I genuinely enjoy teaching others, and have frequently been known to answer simple questions of syntax or usage with short essays covering a variety of use cases, pros, cons, and pitfalls.
+      I enjoy teaching others, and have been known to answer simple questions of syntax or usage with short essays covering a variety of use cases, pros, cons, and pitfalls.
     </p>
   </section>
 
