--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <option value="monokai-dark" selected>[THEME: MONOKAI DARK]</option>
       <option value="one-light">[THEME: ONE LIGHT]</option>
       <option value="one-dark">[THEME: ONE DARK]</option>
+      <option value="plain-light">[THEME: PLAIN LIGHT]</option>
+      <option value="plain-dark">[THEME: PLAIN DARK]</option>
     </select>
   </p>
 
