--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     </select>
   </p>
 
-  <em class="center-title">RESUME</em>
   <p>
-    <span class="center-name">J. Adam Lovatt</span>
+    <em class="center-name">J. ADAM LOVATT</em>
   </p>
 
   <div class="responsive-hide">
