Update LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <footer>
     <em id="contact">CONTACT</em>
 <p class="center-contacts pre"><span class="print-block">* <a href="mailto://jalovatt@hotmail.com">jalovatt@hotmail.com</a> </span>      <span class="print-block">* (403)852-8780</span>
-<span class="print-block">* <a target="_blank" href="https://github.com/jalovatt">Github</a></span>                     <span class="print-block">* <a target="_blank" href="https://www.linkedin.com/in/adam-lovatt-864b25127/">LinkedIn</a></span></p>
+<span class="print-block">* <a target="_blank" href="https://github.com/jalovatt">Github</a></span>                     <span class="print-block">* <a target="_blank" href="https://www.linkedin.com/in/adam-lovatt/">LinkedIn</a></span></p>
   </span>
   </footer>
 
