Add Jungle to projects

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     </p>
 
     <p class="indent">
+      * <a target="_blank" href="http://lighthouse-jungle.herokuapp.com/">Jungle</a>: A mock e-commerce page using Ruby on Rails.
+    </p>
+
+    <p class="indent">
       * <a target="_blank" href="https://github.com/jalovatt/lighthouse-chatty#haxxy">Haxxy</a>: A real-time chat app built with React and a Websocket-based Express server.
     </p>
 
