Add final project

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     </p>
 
     <p class="indent">
+      * <a target="_blank" href="http://where-on-wikipedia.herokuapp.com/">Where on Wikipedia</a>: A recreation of the Carmen Sandiego games, using Wikipedia's API to generate random game content.
+    </p>
+
+    <p class="indent">
       * <a target="_blank" href="https://github.com/jalovatt/lighthouse-chatty#haxxy">Haxxy</a>: A real-time chat app built with React and a Websocket-based Express server.
     </p>
 
@@ -74,9 +78,9 @@
       * <a target="_blank" href="http://sextant-lhl.herokuapp.com/">Sextant</a>: A user-driven library of useful websites for topics covered in the bootcamp, designed to fit in seamlessly with Lighthouse Labs' Compass learning platform.
     </p>
 
-    <p class="indent">
+    <!-- <p class="indent">
       * <a target="_blank" href="http://lighthouse-jungle.herokuapp.com/">Jungle</a>: A mock e-commerce page using Ruby on Rails.
-    </p>
+    </p> -->
 
     <p>
       Notable projects (written in Lua) for <a target="_blank" href="https://www.reaper.fm/">REAPER</a>, a digital audio workstation:
