Update history and skills

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <em class="offset-anchor" id="summary">SUMMARY</em>
   <section class="indent">
     <p>
-      Junior web developer with experience in UI design and project management, and proficiency in JavaScript, HTML5, CSS3, Ruby, and Lua.
+      Web developer with experience in UI design and project management, and proficiency in JavaScript, HTML5, CSS3, Ruby, and Lua.
     </p>
     <p>
       I love logic, puzzles, and visual design, and I'm fascinated by the interplay between them that we find on the modern Web. Having gotten into coding during the early years of JavaScript, the improvements that have been made in recent years seem just short of wizardry. Who doesn't want to be a wizard?
@@ -57,33 +57,12 @@
 
   <em class="offset-anchor" id="projects">PROJECTS</em>
   <section class="indent">
+    <p>
+      * <a target="_blank" href="https://apps2.cer-rec.gc.ca/conditions">Conditions</a>: A visualization for Canada's Energy Regulator that guides users through the large number of legal conditions attached to pipelines and other energy projects.
+    </p>
 
     <p>
-      Web projects developed for Lighthouse Labs'&nbsp;<wbr><a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Web Development Bootcamp</a>:
-    </p>
-
-    <p class="indent">
-      * <a target="_blank" href="http://where-on-wikipedia.herokuapp.com/">Where on Wikipedia</a>: A recreation of the Carmen Sandiego games, using Wikipedia's API to generate random game content.
-    </p>
-
-    <p class="indent">
-      * <a target="_blank" href="https://github.com/jalovatt/lighthouse-chatty#haxxy">Haxxy</a>: A real-time chat app built with React and a Websocket-based Express server.
-    </p>
-
-    <p class="indent">
-      * <a target="_blank" href="http://grogger.herokuapp.com/">Grogger</a>: A Twitter-style single page app using JQuery to communicate with an Express back-end.
-    </p>
-
-    <p class="indent">
-      * <a target="_blank" href="http://sextant-lhl.herokuapp.com/">Sextant</a>: A user-driven library of useful websites for topics covered in the bootcamp, designed to fit in seamlessly with Lighthouse Labs' Compass learning platform.
-    </p>
-
-    <!-- <p class="indent">
-      * <a target="_blank" href="http://lighthouse-jungle.herokuapp.com/">Jungle</a>: A mock e-commerce page using Ruby on Rails.
-    </p> -->
-
-    <p>
-      Notable projects (written in Lua) for <a target="_blank" href="https://www.reaper.fm/">REAPER</a>, a digital audio workstation:
+      Notable projects for <a target="_blank" href="https://www.reaper.fm/">REAPER</a>, a digital audio workstation:
     </p>
 
     <p class="indent">
@@ -101,6 +80,21 @@
       A suite of tools that assist users in matching musical notes to a scale, generating chords, and creating harmonies.
     </p>
 
+    <p>
+      Web projects developed for Lighthouse Labs'&nbsp;<wbr><a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Web Development Bootcamp</a>:
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="http://where-on-wikipedia.herokuapp.com/">Where on Wikipedia</a>: A recreation of the Carmen Sandiego games, using Wikipedia's API to generate random game content.
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="https://github.com/jalovatt/lighthouse-chatty#haxxy">Haxxy</a>: A real-time chat app built with React and a Websocket-based Express server.
+    </p>
+
+    <p class="indent">
+      * <a target="_blank" href="http://grogger.herokuapp.com/">Grogger</a>: A Twitter-style single page app using JQuery to communicate with an Express back-end.
+    </p>
 
   </section>
 
@@ -112,9 +106,13 @@
         Adept at programming in:
       </p>
 
-      <p class="indent pre">* JavaScript    * SQL
-* HTML5         * Ruby
-* CSS3          * Lua</p>
+      <p class="pre">* JavaScript
+* React
+* HTML5
+* CSS3/SASS
+* Lua
+* Rust
+</p>
     </div>
 
     <div class="indent print-experienced">
@@ -122,12 +120,12 @@
         Experienced in:
       </p>
 
-      <p class="indent pre">* jQuery        * Express
-* React         * MongoDB
-* Node          * PostgreSQL
-* Rails         * Heroku
-* Mocha/Chai    * SASS
-* Git</p>
+      <p class="pre">* Node          * Express
+* SQL           * PostgreSQL
+* jQuery        * MongoDB
+* Ruby          * Rails
+* Mocha/Chai    * Git
+* Heroku        * C#</p>
     </div>
 
 
@@ -184,6 +182,12 @@
   </section>
 
   <em class="offset-anchor" id="history">PERSONAL HISTORY</em>
+  <section class="indent">
+    <em>v3.1</em> - VizworX Inc. (January 2019-Present)
+    <p class="indent">
+      Software developer, working on custom solutions and data visualizations.
+    </p>
+  </section>
   <section class="indent">
     <em>v3.0</em> - Lighthouse Labs Web Development Bootcamp (Winter 2018)
     <p class="indent">
